Refresh Token Mechanism fixed and get user has been corrected